<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dancing_dog"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_overlay_20">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/paws"
            android:layout_margin="2dp"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv_train_without_fera_or_pain"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/train_without_fera_or_pain" />


            <TextView
                android:id="@+id/tv_lets_do_this"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/lets_do_this"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="-5dp"
                android:elevation="10dp"
                android:background="@drawable/button_bckground_with_ripple"/>

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/black"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/already_a_member"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

</FrameLayout>
