<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"></android.support.v7.widget.Toolbar>-->


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:paddingTop="@dimen/dimens_20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_20dp"
                    android:paddingLeft="@dimen/dimens_20dp"
                    android:paddingRight="@dimen/dimens_20dp">

                    <ImageView
                        android:layout_width="@dimen/dimens_20dp"
                        android:layout_height="@dimen/dimens_20dp"
                        android:src="@mipmap/ic_launcher" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/the_clicker_collar"
                        android:textColor="@color/green"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/dimens_20dp"
                    android:paddingRight="@dimen/dimens_20dp"
                    android:paddingTop="@dimen/dimens_20dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_login_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimens_5dp"
                        android:layout_marginTop="@dimen/dimens_10dp"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_create_account_page_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimens_5dp"
                        android:layout_marginTop="@dimen/dimens_10dp"
                        android:gravity="center"
                        android:text="@string/simple_create_account_page_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/button_red"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/mTilName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimens_10dp"
                        android:textColorHint="@color/grey"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/grey"
                            android:hint="@string/prompt_name"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="@color/grey" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/mTilEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimens_5dp"
                        android:textColorHint="@color/grey"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/grey"
                            android:hint="@string/prompt_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="@color/grey" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/mTilPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimens_5dp"
                        android:textColorHint="@color/grey"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                        app:passwordToggleEnabled="true">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/grey"
                            android:hint="@string/prompt_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="@color/grey" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:background="?attr/selectableItemBackground">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tv_lets_do_this"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_background_rectangle"
                            android:gravity="center"
                            android:text="@string/lets_let_the_dogs_out"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_resend_verification_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimens_5dp"
                        android:layout_marginTop="@dimen/dimens_30dp"
                        android:gravity="center"
                        android:visibility="gone">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tv_resend_verification_link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/resend_verification_link"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>